--- a/app/src/main/res/drawable/ic_comment.xml
+++ b/app/src/main/res/drawable/ic_comment.xml
@@ -1,5 +1,5 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="25dp" android:viewportHeight="24" android:viewportWidth="24" android:width="25dp">
       
-    <path android:fillColor="#FF000000" android:pathData="m19,2h-14a3.009,3.009 0,0 0,-3 3v16a0.992,0.992 0,0 0,0.51 0.87,0.947 0.947,0 0,0 0.49,0.13 1,1 0,0 0,0.51 -0.14l4.05,-2.43a3.043,3.043 0,0 1,1.55 -0.43h9.89a3.009,3.009 0,0 0,3 -3v-11a3.009,3.009 0,0 0,-3 -3zM17,14h-10a1,1 0,0 1,0 -2h10a1,1 0,0 1,0 2zM17,9h-10a1,1 0,0 1,0 -2h10a1,1 0,0 1,0 2z"/>
+    <path android:fillColor="@color/gray" android:pathData="m19,2h-14a3.009,3.009 0,0 0,-3 3v16a0.992,0.992 0,0 0,0.51 0.87,0.947 0.947,0 0,0 0.49,0.13 1,1 0,0 0,0.51 -0.14l4.05,-2.43a3.043,3.043 0,0 1,1.55 -0.43h9.89a3.009,3.009 0,0 0,3 -3v-11a3.009,3.009 0,0 0,-3 -3zM17,14h-10a1,1 0,0 1,0 -2h10a1,1 0,0 1,0 2zM17,9h-10a1,1 0,0 1,0 -2h10a1,1 0,0 1,0 2z"/>
     
 </vector>
