--- a/app/src/main/res/layout/rv_item_post.xml
+++ b/app/src/main/res/layout/rv_item_post.xml
@@ -26,7 +26,7 @@
                 android:layout_gravity="start"
                 android:orientation="vertical">
                 <ImageView
-                    android:id="@+id/iv_avatar"
+                    android:id="@+id/iv_author_avatar"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="5dp"
@@ -34,11 +34,12 @@
                     android:src="@drawable/default_avatar" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tv_username"
+                    android:id="@+id/tv_author_username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:textStyle="bold"
-                    android:text="Username" />
+                    android:text="username" />
 
 
             </LinearLayout>
@@ -85,10 +86,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+       android:layout_marginHorizontal="5dp"
         android:paddingVertical="5dp"
         android:paddingHorizontal="10dp"
-        android:gravity="center_horizontal"
+        android:gravity="end"
         android:background="@drawable/rounded_post_background"
         android:orientation="horizontal">
         <LinearLayout
