--- a/app/src/main/res/drawable/rounded_post_edit_text.xml
+++ b/app/src/main/res/drawable/rounded_post_edit_text.xml
@@ -5,5 +5,5 @@
     <solid android:color="@color/post_edit_text" />
     <stroke
         android:width="1dp"
-        android:color="@color/soft_gray" />
+        android:color="@color/gray" />
 </shape>
