--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:alpha="0.5"
+            app:shimmer_colored="true"
+            app:shimmer_base_color="@color/soft_gray"
+            android:alpha="0.4"
             android:background="@color/shimmerBackground"
             >
             <com.google.android.material.textview.MaterialTextView
@@ -51,7 +53,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:alpha="0.5"
+        app:shimmer_colored="true"
+        app:shimmer_base_color="@color/soft_gray"
+        android:alpha="0.4"
         android:background="@color/shimmerBackground">
 
         <com.google.android.material.textview.MaterialTextView
@@ -92,7 +96,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:alpha="0.5"
+            app:shimmer_colored="true"
+            app:shimmer_base_color="@color/soft_gray"
+            android:alpha="0.4"
             android:background="@drawable/shimmer_circle"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
