--- a/app/src/main/res/layout/add_post_dialog.xml
+++ b/app/src/main/res/layout/add_post_dialog.xml
@@ -54,6 +54,19 @@
         </ImageButton>
 
 
+        <ImageButton
+            android:id="@+id/ib_publish"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:background="@drawable/ic_publish"
+            android:backgroundTint="@color/neutral"
+            android:layout_marginTop="25dp"
+           android:layout_gravity="end"
+            android:layout_marginEnd="10dp">
+
+        </ImageButton>
+
+
     </com.google.android.material.appbar.MaterialToolbar>
 
 
@@ -61,30 +74,19 @@
     <EditText
         android:id="@+id/et_post"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:hint="@string/share_your_thoughts"
         android:layout_marginHorizontal="5dp"
+        android:layout_marginBottom="5dp"
         android:gravity="start"
         android:padding="10dp"
         android:background="@drawable/rounded_edit_text_change"
         android:paddingTop="10dp"
         android:paddingBottom="25dp"
-        android:paddingHorizontal="5dp"
         android:textColor="@color/black"
         android:fontFamily="@font/klukva">
 
     </EditText>
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/bt_publish"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:backgroundTint="@color/neutral"
-        style="@style/ButtonProfile"
-        android:layout_marginEnd="5dp"
-        android:text="@string/publish"
-       >
-    </com.google.android.material.button.MaterialButton>
+
 
 </LinearLayout>
