--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -32,11 +32,20 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/fl_empty_message"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone"
+     >
+        <ImageView
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:src="@drawable/ic_empty_box"
+            android:layout_gravity="center" >
+        </ImageView>
 
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="wrap_content"
@@ -47,7 +56,7 @@
             android:textColor="@color/gray"
             android:layout_gravity="center" />
 
-    </FrameLayout>
+    </LinearLayout>
 
 <com.facebook.shimmer.ShimmerFrameLayout
     android:id="@+id/shimmer_posts"
