--- a/app/src/main/res/layout/profile_settings_dialog.xml
+++ b/app/src/main/res/layout/profile_settings_dialog.xml
@@ -188,16 +188,15 @@
 
             </com.google.android.material.button.MaterialButton>
 
-            <com.google.android.material.textview.MaterialTextView
+            <com.google.android.material.button.MaterialButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:text="@string/change_password_link"
                 android:textSize="15sp"
-                android:textColor="@color/dark_gray"
+                android:background="@android:color/transparent"
+                android:textColor="@color/link"
                 android:layout_gravity="center_horizontal">
-
-            </com.google.android.material.textview.MaterialTextView>
+            </com.google.android.material.button.MaterialButton>
         </LinearLayout>
 
 
@@ -215,7 +214,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="20dp"
-        android:visibility="gone"
+       android:visibility="gone"
         android:orientation="vertical"
         >
 
@@ -332,17 +331,19 @@
 
         </Button>
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_change_password"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/bt_change_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:text="@string/change_password_link"
             android:textSize="15sp"
-            android:textColor="@color/dark_gray"
+            android:background="@android:color/transparent"
+            android:textColor="@color/link"
+            android:foreground="?attr/selectableItemBackground"
             android:layout_gravity="center_horizontal">
 
-        </com.google.android.material.textview.MaterialTextView>
+
+        </com.google.android.material.button.MaterialButton>
     </LinearLayout>
 
 
