--- a/app/src/main/res/layout/rv_item_post.xml
+++ b/app/src/main/res/layout/rv_item_post.xml
@@ -82,14 +82,110 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:textColor="@color/dark_gray"
+        android:visibility="gone"
         android:text="">
 
     </com.google.android.material.textview.MaterialTextView>
 
 
+        <ImageView
+            android:id="@+id/iv_post_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:visibility="gone">
+        </ImageView>
+        <VideoView
+            android:id="@+id/vv_video"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:visibility="gone"
+            android:src="@color/black">
+        </VideoView>
+
+        <LinearLayout
+            android:id="@+id/ll_audio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="5dp"
+            android:visibility="gone"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_play_audio"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:foreground="?attr/selectableItemBackground"
+                android:src="@drawable/ic_play">
+
+            </ImageView>
+
+
+            <ProgressBar
+                android:id="@+id/pb_audio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_gravity="center"
+                android:progress="0"
+                android:max="100"
+                android:progressTint="@color/neutral"
+                android:layout_marginEnd="10dp"
+                style="@android:style/Widget.Material.ProgressBar.Horizontal">
+            </ProgressBar>
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ll_voice"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center_vertical"
+            android:visibility="gone"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_play_voice"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:foreground="?attr/selectableItemBackground"
+                android:src="@drawable/ic_play">
+            </ImageView>
+
+            <ProgressBar
+                android:id="@+id/pb_voice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_gravity="center"
+                android:progress="0"
+                android:max="100"
+                android:progressTint="@color/audio_wave"
+                android:layout_marginEnd="10dp"
+                style="@android:style/Widget.Material.ProgressBar.Horizontal">
+            </ProgressBar>
+
+        </LinearLayout>
+
+
+
+
+
+
+
+
+
 
 
 </LinearLayout>
+
+
+
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
