--- a/app/src/main/res/layout/rv_item_post.xml
+++ b/app/src/main/res/layout/rv_item_post.xml
@@ -80,27 +80,51 @@
         android:id="@+id/tv_text_post_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:textColor="@color/dark_gray"
         android:visibility="gone"
         android:text="">
 
     </com.google.android.material.textview.MaterialTextView>
 
+<LinearLayout
+    android:id="@+id/ll_media"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:visibility="gone"
+    android:orientation="horizontal"
+    >
+    <ImageView
+        android:id="@+id/iv_post_image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:visibility="gone">
+    </ImageView>
 
+    <RelativeLayout
+        android:id="@+id/rl_post_video"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="5dp"
+        android:visibility="gone"
+        >
         <ImageView
-            android:id="@+id/iv_post_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:visibility="gone">
-        </ImageView>
-        <VideoView
-            android:id="@+id/vv_video"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:visibility="gone"
-            android:src="@color/black">
-        </VideoView>
+            android:id="@+id/iv_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
+        <ImageButton
+            android:id="@+id/ib_play"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:background="@android:color/transparent"
+            android:src="@android:drawable/ic_media_play"
+            android:layout_centerInParent="true" />
+
+    </RelativeLayout>
+
+</LinearLayout>
 
         <LinearLayout
             android:id="@+id/ll_audio"
@@ -108,7 +132,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:visibility="gone"
             android:orientation="horizontal">
 
@@ -169,17 +193,6 @@
             </ProgressBar>
 
         </LinearLayout>
-
-
-
-
-
-
-
-
-
-
-
 </LinearLayout>
 
 
