--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -160,5 +160,20 @@
         <item name="android:background">@drawable/rounded_navigation</item>
 
     </style>
+    <style name="Theme.Linksy.Fullscreen" parent="Theme.Linksy">
+        <item name="android:actionBarStyle">@style/Widget.Theme.Linksy.ActionBar.Fullscreen</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
+    </style>
+
+    <style name="ThemeOverlay.Linksy.FullscreenContainer" parent="">
+        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
+        <item name="fullscreenTextColor">@color/light_blue_A200</item>
+    </style>
+
+    <style name="FullScreenActivity" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowFullscreen">true</item>
+
+    </style>
 
 </resources>
