I changed the "photos" tab to "moments", wrote the logic for editing and sending files to the server, improved the design.

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -79,6 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/TextLinkStyle"
+            android:foreground="?attr/selectableItemBackground"
             android:text="@string/link_forgot_password">
 
         </com.google.android.material.textview.MaterialTextView>
