--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -71,16 +71,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
     <include
-        layout="@layout/rv_item_post"
+        layout="@layout/rv_item_posts"
         />
     <include
-        layout="@layout/rv_item_post"
+        layout="@layout/rv_item_posts"
         />
     <include
-        layout="@layout/rv_item_post"
+        layout="@layout/rv_item_posts"
         />
     <include
-        layout="@layout/rv_item_post"
+        layout="@layout/rv_item_posts"
         />
     </LinearLayout>
 </com.facebook.shimmer.ShimmerFrameLayout>
