--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -157,7 +157,7 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/photos" />
+            android:text="@string/moments" />
     </com.google.android.material.tabs.TabLayout>
     <FrameLayout
         android:id="@+id/fl_fragment_container_profile"
