--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -138,6 +138,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
+            android:foreground="?attr/selectableItemBackground"
             android:text="@string/login_button">
 
         </com.google.android.material.textview.MaterialTextView>
