--- a/app/src/main/res/layout/rv_item_posts.xml
+++ b/app/src/main/res/layout/rv_item_posts.xml
@@ -118,8 +118,8 @@
             android:id="@+id/ib_play"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:background="@android:color/transparent"
-            android:src="@android:drawable/ic_media_play"
+            android:background="@drawable/ic_play"
+            android:backgroundTint="@color/soft_gray"
             android:layout_centerInParent="true" />
 
     </RelativeLayout>
