--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,4 +39,9 @@
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
+    <color name="moment_background">#66F4F4F4</color>
+    <color name="moment_stroke">#CECCCC</color>
+    <color name="green">#009688</color>
+    <color name="blue">#3F51B5</color>
+    <color name="purple">#9C27B0</color>
 </resources>
