--- a/app/src/main/res/layout/create_moment_dialog.xml
+++ b/app/src/main/res/layout/create_moment_dialog.xml
@@ -22,6 +22,15 @@
             android:text="@string/new_moment">
 
         </com.google.android.material.textview.MaterialTextView>
+
+        <ImageButton
+            android:id="@+id/ib_hint"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/ic_question"
+            android:layout_marginStart="30dp">
+
+        </ImageButton>
         <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_publish"
             android:background="@drawable/ic_publish"
@@ -56,6 +65,7 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_gravity="center"
+        android:scaleType="centerCrop"
         android:visibility="gone">
     </ImageView>
 
