--- a/app/src/main/res/layout/rv_item_moments.xml
+++ b/app/src/main/res/layout/rv_item_moments.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="3dp"
+    android:layout_marginBottom="3dp"
+    >
 
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        
-        
+
+
         <ImageView
             android:id="@+id/iv_moment_frame"
             android:layout_width="100dp"
-            android:layout_height="100dp">
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"
+            android:background="@color/soft_gray"
+            android:foreground="?attr/selectableItemBackground"
+            >
         </ImageView>
 
         <ImageView
