--- a/app/src/main/res/drawable/rounded_moment_background.xml
+++ b/app/src/main/res/drawable/rounded_moment_background.xml
@@ -3,9 +3,7 @@
     android:shape="rectangle">
     <corners android:radius="20dp">
     </corners>
-    <solid android:color="@color/moment_text_back"
+    <solid android:color="@color/dark_gray"
         />
-    <stroke
-        android:width="1dp"
-        android:color="@color/dark_gray" />
+
 </shape>
