--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -46,4 +46,5 @@
     <color name="green">#009688</color>
     <color name="blue">#3F51B5</color>
     <color name="purple">#9C27B0</color>
+    <color name="moment_progress">#C5471F</color>
 </resources>
